--- a/index.html
+++ b/index.html
@@ -49,21 +49,29 @@
       </div>
     </div>
 
-    <div class="card-right  shadow  rounded-4 text-white d-flex flex-column p-4 position-relative "
-      style="width:380px;">
+    <!-- <div class="card-right  shadow  rounded-4 text-white d-flex flex-column p-4 position-relative "
+      style="width:380px; padding-block:1.5rem; height:auto; min-height:200px;"> -->
+    <div class="card-right shadow rounded-4 text-white d-flex flex-column position-relative"
+      style="width:380px; padding:1.5rem 2rem; gap:0.5rem;">
+
+
+      <!-- <div class="d-flex justify-content-end p-4"> -->
+      <div class="d-flex justify-content-end mb-0">
+
+        <div class="speech-bubble bg-light border rounded-3 shadow-sm px-3 py-2">
+          <span class="fw-bold fs-4">185</span>
+          <span class="text-secondary small">GB Left</span>
+
+        </div>
+      </div>
 
       <p class="mt-3">You’ve used <strong>>815 GB </strong> of your storage</p>
-      <!-- <div class = "progress  mb-2    style="height: 16px">
-      <div classs="progress-bar rounde=pill position-relative
-      -->
-      <!-- </div> -->
+
 
       <div class="progress mb-2 d-flex" style="height: 15px; position: relative" role="progressbar"
         aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
         <div class="progress-bar rounded-pill" style="width: 75%"></div>
 
-        <!-- <span class= whiteknob ></span> -->
-        <!-- white circle INSIDE the bar at the right tip -->
         <span style="
       position: absolute;
       top: 50%;
@@ -76,42 +84,11 @@
     "></span>
       </div>
 
-      <!-- <span class="label left-label">0 GB</span>
-    <span class="label right-label">100 GB</span> -->
-      <!-- <div class="comment-box">
-      <p>185</p>
-      <span>GB LEFT</span>
-    </div> -->
 
       <div class="d-flex justify-content-between">
         <span>0 GB</span>
         <span>100 GB</span>
       </div>
-
-      <!-- <div class="d-flex justify-content-between align-items-end">
-        <span>0 GB</span> -->
-
-      <!-- <div class="d-flex justify-content-between align-items-end">
-  <span>0 GB</span> -->
-      <!-- 
-      <!-- <div class="text-end">
-        <!-- your comment box -->
-      <!-- <div class="container px-2 py-1 bg-white border rounded mb-1" style="width: 90px;"> -->
-      <!-- 185 GB Left -->
-      <!-- </div> -->
- <div class="d-flex justify-content-end p-4">
-  <div class="speech-bubble bg-light border rounded-3 shadow-sm px-3 py-2">
-    <span class="fw-bold fs-4">185</span> 
-      <span class="text-secondary small">GB Left</span>  
-
-  </div>
-</div>
-
-
-
-
-
-
     </div>
     </div>
 
