--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Right side  -->
 
       <div class="card-right shadow rounded-4 text-white d-flex flex-column position-relative p-4"
-        style="width: 375px; height: 120px;"> <!-- Adjusted width and height -->
+        style="width: 375px; height: 120px;"> 
 
         <div class="position-absolute top-0 end-0 translate-middle-y me-4">
           <div class="speech-bubble bg-light text-dark  px-3 py-2 fw-bold rounded-3 shadow-sm">
