--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!-- Left side -->
 
-      <div class="card-left shadow text-white d-flex flex-column p-4 align-items-start">
+      <section class="card-left shadow text-white d-flex flex-column p-4 align-items-start">
 
         <img src="images/logo.svg" alt="companylogo" class="mb-4" style="width: 100px;"> <!-- icon img -->
 
@@ -37,11 +37,11 @@
             <img src="images/icon-upload.svg" alt="companylogo" width="15px">
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- Right side  -->
 
-      <div class="card-right shadow rounded-4 text-white d-flex flex-column position-relative p-4"
+      <section class="card-right shadow rounded-4 text-white d-flex flex-column position-relative p-4"
         style="width: 375px; height: 120px;"> 
 
         <div class="position-absolute top-0 end-0 translate-middle-y me-4">
@@ -54,19 +54,16 @@
 
 
         <div class="progress position-relative mt-2 rounded-pill" style="height: 15px;">
-
           <div class="progress-bar rounded-pill" style="width: 75%"></div>
           <span class=" custom whiteknob position-absolute top-50"></span>
-
         </div>
 
         <div class="d-flex justify-content-between small text-secondary">
           <span class="gb">0 GB</span>
           <span class="gb">100 GB</span>
         </div>
-      </div>
+      </section>
     </div>
-
     </div>
   </main>
 </body>
